updates to manuscript

--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -22,8 +22,8 @@
 \begin{center}
 	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
 	\label{fig:1}
-	\caption{Spatial factor coefficients illustrating the three main separating components for: (a [LABEL]) the average spatial encounter
-		probability and (b [LABEL]) the average density [LABEL ROWS `Factor 1' ETC.]. Scale goes from red (positive association to the factor) to white (no association) to blue (negative association)}
+	\caption{Spatial factor coefficients illustrating the three main separating components for: (a) the average spatial encounter
+		probability and (b) the average density . Scale goes from red (positive association to the factor) to white (no association) to blue (negative association)}
 \end{center}
 \end{figure}
 
@@ -61,15 +61,6 @@
 	locations in 2015}
 \end{center}
 \end{figure}
-
-\begin{figure}
-\begin{center}
-	\includegraphics[width=\linewidth]{"Figure 5 - TechnicalEfficiency"}
-	\label{fig:5}
-	\caption{Example of technical efficiency space}
-\end{center}
-\end{figure}
-
 
 
 
